Grist tags for secondary grist types