@@ -1,6 +1,5 @@
 package com.mraof.minestuck.item.crafting.alchemy;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.mraof.minestuck.Minestuck;
 import com.mraof.minestuck.util.MSNBTUtil;
@@ -9,6 +8,7 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.registries.ForgeRegistryEntry;
@@ -17,7 +17,6 @@ import org.apache.logging.log4j.Logger;
 
 import java.util.*;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class GristType extends ForgeRegistryEntry<GristType> implements Comparable<GristType>
 {
@@ -30,7 +29,6 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 	private final float value;
 	private final boolean underlingType;
 	private final Supplier<ItemStack> candyItem;
-	private final List<Supplier<GristType>> secondaryTypes;
 	private final Set<SpawnCategory> spawnCategories;
 	private String translationKey;
 	private ResourceLocation icon;
@@ -41,7 +39,6 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 		value = properties.value;
 		underlingType = properties.isUnderlingType;
 		candyItem = properties.candyItem;
-		secondaryTypes = ImmutableList.copyOf(properties.secondaryGristTypes);
 		spawnCategories = ImmutableSet.copyOf(properties.categories);
 	}
 	
@@ -120,7 +117,15 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 	
 	public List<GristType> getSecondaryTypes()
 	{
-		return secondaryTypes.stream().map(Supplier::get).collect(Collectors.toList());
+		return Objects.requireNonNull(GristTypes.getRegistry().tags())
+				.getTag(this.getSecondaryTypesTag()).stream().toList();
+	}
+	
+	public TagKey<GristType> getSecondaryTypesTag()
+	{
+		ResourceLocation name = GristTypes.getRegistry().getKey(this);
+		Objects.requireNonNull(name);
+		return GristTypes.GRIST_TYPES.createTagKey(new ResourceLocation(name.getNamespace(), "secondary/" + name.getPath()));
 	}
 	
 	public boolean isInCategory(SpawnCategory category)
@@ -213,7 +218,6 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 		private final float rarity, value;
 		private boolean isUnderlingType = true;
 		private Supplier<ItemStack> candyItem = () -> ItemStack.EMPTY;
-		private final List<Supplier<GristType>> secondaryGristTypes = new ArrayList<>();
 		private final EnumSet<SpawnCategory> categories = EnumSet.noneOf(SpawnCategory.class);
 		
 		public Properties(float rarity)
@@ -242,12 +246,6 @@ public class GristType extends ForgeRegistryEntry<GristType> implements Comparab
 		public Properties candyStack(Supplier<ItemStack> stack)
 		{
 			candyItem = Objects.requireNonNull(stack);
-			return this;
-		}
-		
-		public Properties secondary(Supplier<GristType> type)
-		{
-			secondaryGristTypes.add(type);
 			return this;
 		}
 		
